# searcher

./: AUTHORS  COPYING  Makefile.am  Makefile.in  Makefile.old  README.md  aclocal.m4  config.h.in  configure  configure.ac
srch/: Makefile.am  Makefile.in  archives.h  bucketinfo_repos.h  composite_posting_iterator.h  config.h.in  config.json  config_branch.h  domain2site_repos.h  draft_pass_module.cc  draft_score_calculator.h  draft_search_results.h  global_index.h  globals.cc  globals.h  grouping_codecs.h  index.h  index_data_iterator.h  itim_algo.h  itim_base.h  itim_constants.h  itim_exception.h  itim_iterator_range.h  itim_string.h  itim_types.h  itim_types_to_stream.h  itim_vector.h  lexicon.h  lexicon_item.h  location_repos.h  mapped_region.h  minus_filter.h  other_phrase_iterator.h  parsed_page.h  parsed_page_repos.h  phrase_iterator.h  plus_phrase_iterator.h  posting.h  posting_iterator.h  posting_list.h  (+12 more)
srch/proto/query_parser/: group.proto  keywordpair.proto  location.proto  spell.proto  syll.proto  synonym.proto  top_site.proto  tree.proto
srch/proto/searcher/: bucketinfo.proto  compare.proto  crawleddata.proto  czone.proto  domain2site.proto  fvector.proto  hpage.proto  hresult.proto  imatch.proto  location.proto  parsed_page.proto  scr.proto  sresult.proto  uresult.proto  whit.proto  wpi.proto
tests/: Makefile.am  Makefile.in  draft_pass_load_test.cc  index_load_test.cc  lexicon_dumper.cc  lexicon_load_test.cc  lexicon_memory_test.cc  lexicon_test.cc  lexicon_threaded_test.cc  long_postings_dumper.cc  posting_list_dumper.cc  posting_list_skip_list_test.cc  posting_list_speed.cc  query_parser_test.cc  t.cc  web_page_info_load_test.cc
tests/index_performance_data/: 100_terms.txt  different_threads_30k.data  different_threads_30k_2.data  ind_1_1_t16_3k_cpp.data  ind_1_1_t16_3k_java.data  ind_1_1_t1_3k_cpp.data  ind_1_1_t1_3k_java.data  ind_1_1_t240_3k_cpp.data  ind_1_1_t240_3k_java.data  ind_1_1_t800_3k_cpp.data  ind_1_2_t16_3k_cpp.data  ind_1_2_t16_3k_java.data  ind_1_2_t1_3k_cpp.data  ind_1_2_t1_3k_java.data  ind_1_2_t240_3k_cpp.data  ind_1_2_t240_3k_java.data  ind_2_1_t16_3k_cpp.data  ind_2_1_t16_3k_java.data  ind_2_1_t1_3k_cpp.data  ind_2_1_t1_3k_java.data  ind_2_1_t240_3k_cpp.data  ind_2_1_t240_3k_java.data  ind_2_1_t800_3k_cpp.data  ind_2_2_t16_3k_cpp.data  ind_2_2_t16_3k_java.data  ind_2_2_t1_3k_cpp.data  ind_2_2_t1_3k_java.data  ind_2_2_t240_3k_cpp.data  ind_2_2_t240_3k_java.data  ind_3_1_t16_3k_cpp.data  ind_3_1_t16_3k_java.data  ind_3_1_t1_3k_cpp.data  ind_3_1_t1_3k_java.data  ind_3_1_t240_3k_cpp.data  ind_3_1_t240_3k_java.data  ind_3_1_t800_3k_cpp.data  ind_3_2_t16_3k_cpp.data  ind_3_2_t16_3k_java.data  ind_3_2_t1_3k_cpp.data  ind_3_2_t1_3k_java.data  (+36 more)
